[gd_scene load_steps=2 format=3 uid="uid://d4lojbxejalbb"]

[ext_resource type="Script" path="res://scenes/interfaces/pause_menu/pause_menu.gd" id="1_ua3ga"]

[node name="PauseMenu" type="ColorRect"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.294118)
script = ExtResource("1_ua3ga")
menu_scene = "res://scenes/interfaces/main_menu/main_menu.tscn"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SaveGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
